syntax = "proto3";


package order_product;
option go_package = "github.com/morshedulmunna/order-service";

service ProductService {
  rpc GetProductDetails (ProductRequest) returns (ProductResponse);
}

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

message ProductRequest {
  string product_id = 1;
}

message ProductResponse {
  string product_id = 1;
  string name = 2;
  float price = 3;
}

message OrderRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message OrderResponse {
  string order_id = 1;
  string product_id = 2;
  int32 quantity = 3;
  float total_price = 4;
}